[package]
name = "rom-hack-manager"
version = "2.1.0"
description = "Download, unzip, and patch ROM hacks all in one go."
authors = ["zuccha"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-open", "fs-all", "http-request", "path-all", "shell-open", "window-close", "window-create", "window-show"] }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "4"
reqwest = "0.11.16"
zip-extract = "0.1.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
