[package]
name = "rom-hack-manager"
version = "2.4.0"
description = "Download, unzip, and patch ROM hacks all in one go."
authors = ["zuccha"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
reqwest = "0.11.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2.0.0-rc", features = ["watch"] }
tauri-plugin-http = "2"
tauri-plugin-window-state = { version = "2" }
zip-extract = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
